# Python-OC-Lettings-FR

./: .coverage  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  clean.py  conf.py  coverage.xml  docker-compose.yaml  index.rst  oc-lettings-site.sqlite3  pyproject.toml  setup.cfg
.circleci/: config.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: conf.py  description_du_projet.rst  description_interfaces_programmation.rst  guide_demarrage_rapide.rst  guide_utilisation.rst  index.rst  instructions_installation.rst  procedures_deploiement.rst  structure_base_de_donnees.rst  technologies_et_langages.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst
lettings/: models.py  test_lettings.py  tests.py  views.py
lettings 2/: apps.py  models.py  views.py
lettings/migrations/: 0001_initial.py  0002_alter_address_options.py  0004_alter_address_id_alter_letting_id.py
oc_lettings_site/: settings copy.py  settings.py  test.py  tests.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_remove_letting_address_delete_address_delete_letting.py  0003_delete_profile.py  0003_remove_letting_address_remove_profile_user_and_more.py
profiles/: models.py  test_profiles.py  tests.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20231026_1617.py  0003_alter_profile_id.py
templates/: 404.html  500.html  index.html
tests/: test_bases.py  test_lettings.py  test_profiles.py
(+50 files in other folders)
