[tool.poetry]
name = "python-oc-lettings-fr"
version = "0.1.0"
description = ""
authors = ["TMee3  <theopsna@protonmail.com>"]
readme = "README.md"
packages = [{include = "python_oc_lettings_fr"}]

[tool.poetry.dependencies]
python = "^3.10.12"
Django = "^5.0"
sentry-sdk = "^1.39.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-django = "^4.7.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
