[tool.poetry]
name = "python-oc-lettings-fr"
version = "0.1.0"
description = ""
authors = ["TMee3  <theopsna@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
sentry-sdk = {extras = ["django"], version = "^1.39.0"}
sphinx = "^7.2.6"
whitenoise = "^6.6.0"
flake8 = "^6.1.0"
black = "^23.12.1"


[tool.poetry.group.dev.dependencies]

pytest-django = "^4.7.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
